Changelog
=========

1.0dev (unreleased)
------------------
* Feature: Added new wise_generic_workflow with check-in/out &&
  upgrade steps/procedure
  [iulianpetchesi #85931]