@@ -1,0 +1,28 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:grok="http://namespaces.zope.org/grok"
+    xmlns:plone="http://namespaces.plone.org/plone"
+    i18n_domain="wise.content">
+
+  <browser:page
+    name="pdf.folder.body"
+    layer="eea.pdf.interfaces.ILayer"
+    for="eea.pdf.interfaces.IPDFAware"
+    class=".overrides.FolderBody"
+    permission="eea.pdf.download"
+  />
+
+  <browser:page
+    name="pdf.page.body"
+    layer="eea.pdf.interfaces.ILayer"
+    for="eea.pdf.interfaces.IPDFAware"
+    class=".overrides.PageBody"
+    permission="eea.pdf.download"
+  />
+
+</configure>
