@@ -1,0 +1,26 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:grok="http://namespaces.zope.org/grok"
+    xmlns:plone="http://namespaces.plone.org/plone"
+    i18n_domain="wise.content">
+
+    -----[ eea.cache integration ]-----------
+
+    <class class="collective.cover.content.Cover">
+        <implements interface="eea.cache.interfaces.ICacheAware" />
+    </class>
+
+    <class class="plone.app.contenttypes.content.NewsItem">
+        <implements interface="eea.cache.interfaces.ICacheAware" />
+    </class>
+
+    <class class="plone.app.contenttypes.content.Document">
+        <implements interface="eea.cache.interfaces.ICacheAware" />
+    </class>
+
+</configure>
